bin/tests/snapshots/empty_let_in__5c1128abfe4ef6b1ed846295f216703a_lint.snap
---
source: bin/tests/empty_let_in.rs
---
let in null
---
[empty_let_in] Warning: Useless let-in expression
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ let in null
   │ ─────┬─────  
   │      ╰─────── This let-in expression has no entries
───╯
