bin/tests/snapshots/empty_let_in__5c1128abfe4ef6b1ed846295f216703a_lint_errfmt.snap
---
source: bin/tests/empty_let_in.rs
---
let in null
---
<temp_file_path>>1:1:W:2:[empty_let_in] This let-in expression has no entries
