bin/tests/snapshots/empty_let_in__5c1128abfe4ef6b1ed846295f216703a_lint_json.snap
---
source: bin/tests/empty_let_in.rs
---
let in null
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "empty_let_in",
      "note": "Useless let-in expression",
      "code": 2,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 12
            }
          },
          "message": "This let-in expression has no entries",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 12
              }
            },
            "fix": "null"
          },
          "fixable": true
        }
      ]
    }
  ]
}
