bin/tests/snapshots/empty_let_in__5c1128abfe4ef6b1ed846295f216703aa1c58b4fcadad40bc25e05858c3bdd08_fix.snap
---
source: bin/tests/empty_let_in.rs
---
let in null
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let in null
+null
