bin/tests/snapshots/empty_let_in__69e2d9e348a3b7903ae1678878867095_lint_stderr.snap
---
source: bin/tests/empty_let_in.rs
---
let
  # don't fix this, we have a comment
  # raise the lint though
in
null
---
[empty_let_in] Warning: Useless let-in expression
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ ╭─▶ let
   ┆ ┆   
 5 │ ├─▶ null
   │ │          
   │ ╰────────── This let-in expression has no entries
───╯
