bin/tests/snapshots/empty_let_in__fix_69e2d9e348a3b7903ae167887886709559b8d299d9ea097621bbbab32e6f3bfa.snap
---
source: bin/tests/empty_let_in.rs
---
let
  # don't fix this, we have a comment
  # raise the lint though
in
null

---
