bin/tests/snapshots/empty_let_in__fix_90bff9a80d6f33f5e56d23d89ca7ac3b45bd224723b00cc2ad517c3f75717ada.snap
---
source: bin/tests/empty_let_in.rs
---
let in null

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let in null
+null
